--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "axios": "^0.24.0",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
     "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "mongoose": "^6.1.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
