--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/router": "~12.2.0",
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "jquery": "^3.6.0",
     "mongoose": "^6.1.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -33,6 +35,7 @@
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/jquery": "^3.5.12",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
